<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/layout">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="@dimen/horizontal_LinearLayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/display_shape"
            android:editable="false"
            android:gravity="right"
            android:text="2121"

            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="@dimen/horizontal_LinearLayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/symbol_C"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_C"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/symbol_percent"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_percent"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number_squareRoot"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_squareRoot"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number_multiplication"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_multiplication"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/horizontal_LinearLayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/number_1"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_1"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number_2"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_2"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number_3"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_3"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number_division"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_division"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/horizontal_LinearLayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/number_4"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_4"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number_5"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_5"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number_6"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_6"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number_minus"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_minus"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/horizontal_LinearLayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/number_7"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_7"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number_8"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_8"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number_9"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_9"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/plus"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_plus"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/horizontal_LinearLayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/number_00"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_00"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number_0"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_0"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number_point"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_point"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/equal"

            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_weight="1"
            android:background="@drawable/buttonsshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/_equal"
            android:textColor="@color/button_texColor"
            android:textSize="30sp" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>
    </FrameLayout>